# Production-grade-data-pipeline-and-advanced-RAG

./: README.md  docker-compose.yml  pyproject.toml
Scripts/: advanced_chunker.py  embedding_client.py  import_to_milvus.py  intelligent_parser.py
data/input/: test.docx  test.md  test_code.md  test_lots_code.md  序章.md  第一卷第一部全.md  第一卷第二部全.md  第三卷第五部.md  第三卷第六部.md  第二卷第三部.md  第二卷第四部.md  终章.md
data/output/: chunks.jsonl  contents.jsonl  parsed.jsonl  vectorized.jsonl
volumes/minio/.minio.sys/: format.json
volumes/minio/a-bucket/files/insert_log/463006173403022383/463006173403022384/463006173403222442/1/463006173403222444/5d6b8263-af3b-45df-b7e1-e488dc756ddd/: part.1
volumes/minio/a-bucket/files/insert_log/463006173403022383/463006173403022384/463006173403222442/102/463006173403222445/62553d4d-ae7a-4248-8b05-bcfc86bee5f4/: part.1
volumes/minio/a-bucket/files/insert_log/463006173403022383/463006173403022384/463006173403223457/0/463006173403333457/f9e71659-cf50-4acf-af84-fac51ca8a566/: part.1
volumes/minio/a-bucket/files/insert_log/463277680224050140/463277680224050141/463277680224050155/0/463277680224050156/0214e467-3f3a-4163-83ec-cef911966cc7/: part.1
volumes/minio/a-bucket/files/wp/12/1/7.blk/91280755-1945-4f5c-8c44-710d9a4087d5/: part.1
volumes/minio/a-bucket/files/wp/12/1/m_0.blk/9d214979-7cae-4d57-90ac-89e43ccb855b/: part.1
volumes/minio/a-bucket/files/wp/12/3/29.blk/fe7f2178-cc33-4220-9abb-8cfe3219d4e5/: part.1
(+2 files in other folders)
